# shortest-path-poly

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  vcpkg.json
.github/workflows/: ci.yml
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
helpers/: geos.natvis
source/: geos_format.hpp  lib.cpp  main.cpp  route.cpp  route.hpp  route_parser.cpp  utils.cpp
test/: CMakeLists.txt
test/data/: basic_route.json  no_segment_route.json
test/source/: shortest-path-poly_test.cpp
visualizer/: show_route.py
